# fermi

./: .gitmodules  CMakeLists.txt  fermi.h  main.cpp  metodos_numericos.h  table_handler.h
